2022-01-09  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-09-19  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add link to sidenotes overview

2021-06-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add repo to URL

2021-02-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/rmarkdown/templates/tintPdf/resources/tintPdf-template.tex:
	Install package 'array' when tables are used

2021-02-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/rmarkdown/templates/tintHtml/resources/tint.css:
	Further tweaking of values for improved references

2021-02-05  David Selby  <qurk.kinschien@gmail.com>

	* inst/rmarkdown/templates/tintHtml/resources/tint.css:
	Improve styling for explicit (non-margin) references

2021-01-21  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-11-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2020-07-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.3

2020-07-15  Dirk Eddelbuettel  <edd@debian.org>

	* R/html.R (tintHtml): Also update margin_references()
	* vignettes/tintHtmlIntro.Rmd: Update citation examples

	* cleanup: Paid tribute the overlord of checkbashism

2020-07-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/html.R (tintHtml): More small updates from tufte
	* R/utils.R (pandoc2): One-line helper function

2020-07-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/html.R (parse_footnotes): Updated from tufte upstream

2020-05-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/tintBibDemo.Rmd: Add simple demo based on
	non-quite-right bug report in issue #42
	* inst/examples/tintBibDemo.bib: One-entry bib file
